# suggestor

./: .gitignore  pyproject.toml
suggestor/: __main__.py  cli.py
