[tool.poetry]
name = "suggestor"
version = "0.1.1"
description = ""
license = "AGPL-3.0-or-later"
authors = ["Alexandre Janvrin <alexandre.janvrin@reseau.eseo.fr>"]
readme = "README.md"
homepage = "https://github.com/LivinParadoX/suggestor/"
repository = "https://pypi.org/project/suggestor/"
keywords = ["pentest", "helper", "tool"]
classifiers = [
	"Intended Audience :: Information Technology",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Topic :: Security"
]
include = ["suggestor/**/*"]

[tool.poetry.scripts]
suggestor = "suggestor.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pymetasploit3 = "^1.0.3"
click = "^8.0.1"
tabulate = "^0.8.9"
pyfzf = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.0"
neovim = "^0.3.1"
jedi = "^0.18.0"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
